# mena-drought-early-warning

./: .gitignore  METHODOLOGY.md  PROJECT_REPORT.md  README.md  pyproject.toml
data/: README.md
data/processed/: monthly_grid.csv
notebooks/: README.md  mena_drought_early_warning_forecasting.ipynb
outputs/: README.md
outputs/maps/: forecast_map_h1_2024_09.html  forecast_risk_map_h1_2024_09.html
outputs/reports/: baseline_run_summary.md  persistence_classification_report_h1.txt  persistence_classification_report_h3.txt  persistence_classification_report_h6.txt  rf_classification_report_h1.txt  rf_classification_report_h3.txt  rf_classification_report_h6.txt
outputs/tables/: forecast_issue_table_h1_2024_09.csv  forecast_model_metrics.csv  spatial_validation_metrics.csv
scripts/: build_sample_monthly_grid.py  environment_check.py  project_setup.py  run_baseline_pipeline.py
src/mena_drought_early_warning/: __init__.py  config.py  deep_learning.py  features.py  gee_extract.py  modeling.py  pipeline.py  reporting.py  sequences.py  utils.py
tests/: test_features.py  test_modeling.py  test_pipeline.py  test_sequences.py
